# kodi-platform

./: CMakeLists.txt  kodiplatform-config.cmake.in
debian/: changelog  changelog.in  control
src/util/: XMLUtils.cpp  XMLUtils.h
src/windows/: os-types.h
